tests/ecc-aws-248-k8s_cluster_network_firewall_inbound_rule_permissive_to_all_traffic/placebo-green/eks.DescribeCluster_1.json
{
    "status_code": 200,
    "data": {
        "ResponseMetadata": {},
        "cluster": {
            "name": "248_eks_cluster_green",
            "arn": "arn:aws:eks:us-east-1:111111111111:cluster/248_eks_cluster_green",
            "createdAt": {
                "__class__": "datetime",
                "year": 2021,
                "month": 10,
                "day": 7,
                "hour": 12,
                "minute": 31,
                "second": 42,
                "microsecond": 213000
            },
            "version": "1.21",
            "endpoint": "https://84815A44B645D8A81F3414313B8299F0.gr7.us-east-1.eks.amazonaws.com",
            "roleArn": "arn:aws:iam::111111111111:role/248_role_green",
            "resourcesVpcConfig": {
                "subnetIds": [
                    "subnet-06f7eaf99030d4c4a",
                    "subnet-06f477f2a842ea355"
                ],
                "securityGroupIds": [
                    "sg-1234567asdfg2",
                    "sg-1234567asdfg1"
                ],
                "clusterSecurityGroupId": "sg-1234567asdfg2",
                "vpcId": "vpc-08d8ec720296562e8",
                "endpointPublicAccess": true,
                "endpointPrivateAccess": false,
                "publicAccessCidrs": [
                    "0.0.0.0/0"
                ]
            },
            "kubernetesNetworkConfig": {
                "serviceIpv4Cidr": "172.20.0.0/16"
            },
            "logging": {
                "clusterLogging": [
                    {
                        "types": [
                            "api",
                            "audit",
                            "authenticator",
                            "controllerManager",
                            "scheduler"
                        ],
                        "enabled": false
                    }
                ]
            },
            "identity": {
                "oidc": {
                    "issuer": "https://oidc.eks.us-east-1.amazonaws.com/id/84815A44B645D8A81F3414313B8299F0"
                }
            },
            "status": "ACTIVE",
            "certificateAuthority": {
                "data": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1UQXdOekE1TXpnME5Gb1hEVE14TVRBd05UQTVNemcwTkZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTVVNCkczSzNaRFFRaFZXL3pNdThWV0xRTm5lNHlLdW1mVzZLakJmVDZCdmR5cXlPeVlMZDJxQmZXRHNLeDlYdkVxUjMKN0ZmZUp0T3RpajRKUFd1K1hWdHM4QUhHdnJoMldkbHJSK1FUZnpNUS9nSDVYTVZ3dHFzVFdWVWY3VGc5UG1tdwo2UFJ [...]
            },
            "platformVersion": "eks.2",
            "tags": {
                "CustodianRule": "ecc-aws-248-k8s_cluster_network_firewall_inbound_rule_permissive_to_all_traffic",
                "ComplianceStatus": "Green"
            }
        }
    }
}
